Create the test database as travis user.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
  - mysql
 
 before_install:
- - mysql -e 'CREATE DATABASE crudapi_test;'
+ - mysql -u travis -e 'CREATE DATABASE crudapi_test;'
 
 install:
   - composer install
